# libavencoding

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  Makefile  README
Debug/: makefile  sources.mk
Debug/src/: AVEncoder.d  AVInputFile.d  AVOutputFile.d  AVSource.d  DeviceInterface.d  ImageShotter.d  RTPStream.d  SharedBuffer.d  Streaming.d  UDPMpegTS.d  X11Terminal.d  subdir.mk
Debug/test/: subdir.mk  test1.d  test2.d  test3.d  test4.d  test5.d  test6.d  test7.d  test8.d
bindings/java/: AVEncoder.cpp  AVInputFile.cpp  AVOutputFile.cpp  ImageShotter.cpp  Makefile  RTPStream.cpp  SharedBuffer.cpp  UDPMpegTS.cpp  X11Terminal.cpp  br_ufscar_lince_streaming_AVEncoder.h  br_ufscar_lince_streaming_AVInputFile.h  br_ufscar_lince_streaming_AVOutputFile.h  br_ufscar_lince_streaming_ImageShotter.h  br_ufscar_lince_streaming_RTPStream.h  br_ufscar_lince_streaming_SharedBuffer.h  br_ufscar_lince_streaming_UDPMpegTS.h  br_ufscar_lince_streaming_X11Terminal.h
doc/: Streaming API.docx
doc/html/: AVContainer_8h_source.html  AVContent_8h_source.html  AVEncoder_8h.html  AVEncoder_8h_source.html  AVInputFile_8h.html  AVInputFile_8h_source.html  AVOutputFile_8h.html  AVOutputFile_8h_source.html  AVSource_8h.html  AVSource_8h_source.html  DeviceInterface_8h.html  DeviceInterface_8h_source.html  IllegalParameterExpection_8h_source.html  ImageShotter_8h.html  ImageShotter_8h_source.html  RTPStream_8h.html  RTPStream_8h_source.html  SharedBuffer_8h.html  SharedBuffer_8h_source.html  StreamingListener_8h_source.html  StreamingProvider_8h_source.html  Streaming_8h.html  Streaming_8h_source.html  Transcoder_8h.html  UDPMpegTS_8h.html  (+62 more)
include/: AVContainer.h  AVEncoder.h  AVEncoding.h  AVEnconding.h  AVInputFile.h  AVOutputFile.h  AVSource.h  AlsaDevice.h  AspectRatio.h  AudioCodec.h  DeviceException.h  DeviceInterface.h  ImageFormat.h  ImageShotter.h  RTPStream.h  SharedBuffer.h  Streaming.h  Transcoder.h  TranscodingException.h  UDPMpegTS.h  V4L2Device.h  VideoCodec.h  WowzaUDPInput.h  X11Terminal.h
src/: AVContainer.cpp  AVEncoder.cpp  AVEncoding.cpp  AVInputFile.cpp  AVOutputFile.cpp  AVSource.cpp  AlsaDevice.cpp  AspectRatio.cpp  AudioCodec.cpp  DeviceException.cpp  DeviceInterface.cpp  ImageFormat.cpp  ImageShotter.cpp  RTPStream.cpp  SharedBuffer.cpp  Streaming.cpp  UDPMpegTS.cpp  V4L2Device.cpp  VideoCodec.cpp  WowzaUDPInput.cpp  X11Terminal.cpp
streaming-java/: .project
test/: .gitignore  Makefile  audioCaptureTest.cpp  audioFileToFileTest.cpp  audiosample.aac  captureCamAndMicTest.cpp  config.xml  fileshotTest.cpp  muxingVideoAndAudioTest.cpp  screenshotTest.cpp  streamingRtpScreenTest.cpp  streamingUDPTest.cpp  test1  test1.cpp  test2  test2.cpp  test3  test3.cpp  test4  test4.cpp  test5  test5.cpp  test6  test6.cpp  test7  test7.cpp  test8  test8.cpp  videoFileToFileTest.cpp
(+165 files in other folders)
